cmake_minimum_required(VERSION 3.6)
project(assignment6_lilywang2110168)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES
        node_modules/fsevents/src/async.cc
        node_modules/fsevents/src/constants.cc
        node_modules/fsevents/src/locking.cc
        node_modules/fsevents/src/methods.cc
        node_modules/fsevents/src/storage.cc
        node_modules/fsevents/src/thread.cc
        node_modules/fsevents/fsevents.cc
        node_modules/nan/nan.h
        node_modules/nan/nan_callbacks.h
        node_modules/nan/nan_callbacks_12_inl.h
        node_modules/nan/nan_callbacks_pre_12_inl.h
        node_modules/nan/nan_converters.h
        node_modules/nan/nan_converters_43_inl.h
        node_modules/nan/nan_converters_pre_43_inl.h
        node_modules/nan/nan_implementation_12_inl.h
        node_modules/nan/nan_implementation_pre_12_inl.h
        node_modules/nan/nan_json.h
        node_modules/nan/nan_maybe_43_inl.h
        node_modules/nan/nan_maybe_pre_43_inl.h
        node_modules/nan/nan_new.h
        node_modules/nan/nan_object_wrap.h
        node_modules/nan/nan_persistent_12_inl.h
        node_modules/nan/nan_persistent_pre_12_inl.h
        node_modules/nan/nan_private.h
        node_modules/nan/nan_string_bytes.h
        node_modules/nan/nan_typedarray_contents.h
        node_modules/nan/nan_weak.h
        node_modules/node-gyp/gyp/data/win/large-pdb-shim.cc
        node_modules/node-gyp/src/win_delay_load_hook.cc
        node_modules/node-sass/src/libsass/contrib/plugin.cpp
        node_modules/node-sass/src/libsass/include/sass/base.h
        node_modules/node-sass/src/libsass/include/sass/context.h
        node_modules/node-sass/src/libsass/include/sass/functions.h
        node_modules/node-sass/src/libsass/include/sass/values.h
        node_modules/node-sass/src/libsass/include/sass/version.h
        node_modules/node-sass/src/libsass/include/sass.h
        node_modules/node-sass/src/libsass/include/sass2scss.h
        node_modules/node-sass/src/libsass/src/b64/cencode.h
        node_modules/node-sass/src/libsass/src/b64/encode.h
        node_modules/node-sass/src/libsass/src/memory/SharedPtr.cpp
        node_modules/node-sass/src/libsass/src/memory/SharedPtr.hpp
        node_modules/node-sass/src/libsass/src/utf8/checked.h
        node_modules/node-sass/src/libsass/src/utf8/core.h
        node_modules/node-sass/src/libsass/src/utf8/unchecked.h
        node_modules/node-sass/src/libsass/src/ast.cpp
        node_modules/node-sass/src/libsass/src/ast.hpp
        node_modules/node-sass/src/libsass/src/ast_def_macros.hpp
        node_modules/node-sass/src/libsass/src/ast_fwd_decl.cpp
        node_modules/node-sass/src/libsass/src/ast_fwd_decl.hpp
        node_modules/node-sass/src/libsass/src/backtrace.hpp
        node_modules/node-sass/src/libsass/src/base64vlq.cpp
        node_modules/node-sass/src/libsass/src/base64vlq.hpp
        node_modules/node-sass/src/libsass/src/bind.cpp
        node_modules/node-sass/src/libsass/src/bind.hpp
        node_modules/node-sass/src/libsass/src/c99func.c
        node_modules/node-sass/src/libsass/src/cencode.c
        node_modules/node-sass/src/libsass/src/check_nesting.cpp
        node_modules/node-sass/src/libsass/src/check_nesting.hpp
        node_modules/node-sass/src/libsass/src/color_maps.cpp
        node_modules/node-sass/src/libsass/src/color_maps.hpp
        node_modules/node-sass/src/libsass/src/constants.cpp
        node_modules/node-sass/src/libsass/src/constants.hpp
        node_modules/node-sass/src/libsass/src/context.cpp
        node_modules/node-sass/src/libsass/src/context.hpp
        node_modules/node-sass/src/libsass/src/cssize.cpp
        node_modules/node-sass/src/libsass/src/cssize.hpp
        node_modules/node-sass/src/libsass/src/debug.hpp
        node_modules/node-sass/src/libsass/src/debugger.hpp
        node_modules/node-sass/src/libsass/src/emitter.cpp
        node_modules/node-sass/src/libsass/src/emitter.hpp
        node_modules/node-sass/src/libsass/src/environment.cpp
        node_modules/node-sass/src/libsass/src/environment.hpp
        node_modules/node-sass/src/libsass/src/error_handling.cpp
        node_modules/node-sass/src/libsass/src/error_handling.hpp
        node_modules/node-sass/src/libsass/src/eval.cpp
        node_modules/node-sass/src/libsass/src/eval.hpp
        node_modules/node-sass/src/libsass/src/expand.cpp
        node_modules/node-sass/src/libsass/src/expand.hpp
        node_modules/node-sass/src/libsass/src/extend.cpp
        node_modules/node-sass/src/libsass/src/extend.hpp
        node_modules/node-sass/src/libsass/src/file.cpp
        node_modules/node-sass/src/libsass/src/file.hpp
        node_modules/node-sass/src/libsass/src/functions.cpp
        node_modules/node-sass/src/libsass/src/functions.hpp
        node_modules/node-sass/src/libsass/src/inspect.cpp
        node_modules/node-sass/src/libsass/src/inspect.hpp
        node_modules/node-sass/src/libsass/src/json.cpp
        node_modules/node-sass/src/libsass/src/json.hpp
        node_modules/node-sass/src/libsass/src/kwd_arg_macros.hpp
        node_modules/node-sass/src/libsass/src/lexer.cpp
        node_modules/node-sass/src/libsass/src/lexer.hpp
        node_modules/node-sass/src/libsass/src/listize.cpp
        node_modules/node-sass/src/libsass/src/listize.hpp
        node_modules/node-sass/src/libsass/src/mapping.hpp
        node_modules/node-sass/src/libsass/src/node.cpp
        node_modules/node-sass/src/libsass/src/node.hpp
        node_modules/node-sass/src/libsass/src/operation.hpp
        node_modules/node-sass/src/libsass/src/output.cpp
        node_modules/node-sass/src/libsass/src/output.hpp
        node_modules/node-sass/src/libsass/src/parser.cpp
        node_modules/node-sass/src/libsass/src/parser.hpp
        node_modules/node-sass/src/libsass/src/paths.hpp
        node_modules/node-sass/src/libsass/src/plugins.cpp
        node_modules/node-sass/src/libsass/src/plugins.hpp
        node_modules/node-sass/src/libsass/src/position.cpp
        node_modules/node-sass/src/libsass/src/position.hpp
        node_modules/node-sass/src/libsass/src/prelexer.cpp
        node_modules/node-sass/src/libsass/src/prelexer.hpp
        node_modules/node-sass/src/libsass/src/remove_placeholders.cpp
        node_modules/node-sass/src/libsass/src/remove_placeholders.hpp
        node_modules/node-sass/src/libsass/src/sass.cpp
        node_modules/node-sass/src/libsass/src/sass.hpp
        node_modules/node-sass/src/libsass/src/sass2scss.cpp
        node_modules/node-sass/src/libsass/src/sass_context.cpp
        node_modules/node-sass/src/libsass/src/sass_context.hpp
        node_modules/node-sass/src/libsass/src/sass_functions.cpp
        node_modules/node-sass/src/libsass/src/sass_functions.hpp
        node_modules/node-sass/src/libsass/src/sass_util.cpp
        node_modules/node-sass/src/libsass/src/sass_util.hpp
        node_modules/node-sass/src/libsass/src/sass_values.cpp
        node_modules/node-sass/src/libsass/src/sass_values.hpp
        node_modules/node-sass/src/libsass/src/source_map.cpp
        node_modules/node-sass/src/libsass/src/source_map.hpp
        node_modules/node-sass/src/libsass/src/subset_map.cpp
        node_modules/node-sass/src/libsass/src/subset_map.hpp
        node_modules/node-sass/src/libsass/src/to_c.cpp
        node_modules/node-sass/src/libsass/src/to_c.hpp
        node_modules/node-sass/src/libsass/src/to_value.cpp
        node_modules/node-sass/src/libsass/src/to_value.hpp
        node_modules/node-sass/src/libsass/src/units.cpp
        node_modules/node-sass/src/libsass/src/units.hpp
        node_modules/node-sass/src/libsass/src/utf8.h
        node_modules/node-sass/src/libsass/src/utf8_string.cpp
        node_modules/node-sass/src/libsass/src/utf8_string.hpp
        node_modules/node-sass/src/libsass/src/util.cpp
        node_modules/node-sass/src/libsass/src/util.hpp
        node_modules/node-sass/src/libsass/src/values.cpp
        node_modules/node-sass/src/libsass/src/values.hpp
        node_modules/node-sass/src/libsass/test/test_node.cpp
        node_modules/node-sass/src/libsass/test/test_paths.cpp
        node_modules/node-sass/src/libsass/test/test_selector_difference.cpp
        node_modules/node-sass/src/libsass/test/test_specificity.cpp
        node_modules/node-sass/src/libsass/test/test_subset_map.cpp
        node_modules/node-sass/src/libsass/test/test_superselector.cpp
        node_modules/node-sass/src/libsass/test/test_unification.cpp
        node_modules/node-sass/src/sass_types/boolean.cpp
        node_modules/node-sass/src/sass_types/boolean.h
        node_modules/node-sass/src/sass_types/color.cpp
        node_modules/node-sass/src/sass_types/color.h
        node_modules/node-sass/src/sass_types/error.cpp
        node_modules/node-sass/src/sass_types/error.h
        node_modules/node-sass/src/sass_types/factory.cpp
        node_modules/node-sass/src/sass_types/factory.h
        node_modules/node-sass/src/sass_types/list.cpp
        node_modules/node-sass/src/sass_types/list.h
        node_modules/node-sass/src/sass_types/map.cpp
        node_modules/node-sass/src/sass_types/map.h
        node_modules/node-sass/src/sass_types/null.cpp
        node_modules/node-sass/src/sass_types/null.h
        node_modules/node-sass/src/sass_types/number.cpp
        node_modules/node-sass/src/sass_types/number.h
        node_modules/node-sass/src/sass_types/sass_value_wrapper.h
        node_modules/node-sass/src/sass_types/string.cpp
        node_modules/node-sass/src/sass_types/string.h
        node_modules/node-sass/src/sass_types/value.h
        node_modules/node-sass/src/binding.cpp
        node_modules/node-sass/src/callback_bridge.h
        node_modules/node-sass/src/create_string.cpp
        node_modules/node-sass/src/create_string.h
        node_modules/node-sass/src/custom_function_bridge.cpp
        node_modules/node-sass/src/custom_function_bridge.h
        node_modules/node-sass/src/custom_importer_bridge.cpp
        node_modules/node-sass/src/custom_importer_bridge.h
        node_modules/node-sass/src/sass_context_wrapper.cpp
        node_modules/node-sass/src/sass_context_wrapper.h
        public/css/bootstrap.css
        public/images/10_of_clubs.png
        public/images/10_of_diamonds.png
        public/images/10_of_hearts.png
        public/images/10_of_spades.png
        public/images/2_of_clubs.png
        public/images/2_of_diamonds.png
        public/images/2_of_hearts.png
        public/images/2_of_spades.png
        public/images/3_of_clubs.png
        public/images/3_of_diamonds.png
        public/images/3_of_hearts.png
        public/images/3_of_spades.png
        public/images/4_of_clubs.png
        public/images/4_of_diamonds.png
        public/images/4_of_hearts.png
        public/images/4_of_spades.png
        public/images/5_of_clubs.png
        public/images/5_of_diamonds.png
        public/images/5_of_hearts.png
        public/images/5_of_spades.png
        public/images/6_of_clubs.png
        public/images/6_of_diamonds.png
        public/images/6_of_hearts.png
        public/images/6_of_spades.png
        public/images/7_of_clubs.png
        public/images/7_of_diamonds.png
        public/images/7_of_hearts.png
        public/images/7_of_spades.png
        public/images/8_of_clubs.png
        public/images/8_of_diamonds.png
        public/images/8_of_hearts.png
        public/images/8_of_spades.png
        public/images/9_of_clubs.png
        public/images/9_of_diamonds.png
        public/images/9_of_hearts.png
        public/images/9_of_spades.png
        public/images/ace_of_clubs.png
        public/images/ace_of_diamonds.png
        public/images/ace_of_hearts.png
        public/images/ace_of_spades.png
        public/images/ace_of_spades2.png
        public/images/black_joker.png
        public/images/face_down.jpg
        public/images/jack_of_clubs.png
        public/images/jack_of_clubs2.png
        public/images/jack_of_diamonds.png
        public/images/jack_of_diamonds2.png
        public/images/jack_of_hearts.png
        public/images/jack_of_hearts2.png
        public/images/jack_of_spades.png
        public/images/jack_of_spades2.png
        public/images/king_of_clubs.png
        public/images/king_of_clubs2.png
        public/images/king_of_diamonds.png
        public/images/king_of_diamonds2.png
        public/images/king_of_hearts.png
        public/images/king_of_hearts2.png
        public/images/king_of_spades.png
        public/images/king_of_spades2.png
        public/images/person.png
        public/images/queen_of_clubs.png
        public/images/queen_of_clubs2.png
        public/images/queen_of_diamonds.png
        public/images/queen_of_diamonds2.png
        public/images/queen_of_hearts.png
        public/images/queen_of_hearts2.png
        public/images/queen_of_spades.png
        public/images/queen_of_spades2.png
        public/images/red_joker.png
        public/images/robot.jpg
        public/js/main.js
        public/js/main.map
        public/js/vendor.js
        public/js/vendor.map
        src/client/components/game/announcement.css
        src/client/components/game/announcement.js
        src/client/components/game/game.css
        src/client/components/game/index.js
        src/client/components/game/pile.css
        src/client/components/game/pile.js
        src/client/components/gravitar.js
        src/client/components/header.js
        src/client/components/landing.js
        src/client/components/login.js
        src/client/components/logout.js
        src/client/components/profile.js
        src/client/components/register.js
        src/client/components/results.js
        src/client/components/start.css
        src/client/components/start.js
        src/client/app.css
        src/client/main.js
        src/server/api/v1/game.js
        src/server/api/v1/session.js
        src/server/api/v1/user.js
        src/server/games/cards.js
        src/server/games/hearts.js
        src/server/games/robots.js
        src/server/models/game.js
        src/server/models/user.js
        src/server/base.pug
        src/server/index.js
        package.json
        README.md
        webpack.config.js)

add_executable(assignment6_lilywang2110168 ${SOURCE_FILES})